style: set size bording margin for practice page

--- a/ex-1/index.html
+++ b/ex-1/index.html
@@ -14,6 +14,20 @@
 
 <body>
   <!-- Start coding here -->
+   <div class="main-container">
+      <div class="content">
+        <h3>คาเฟ่เชียงใหม่น่าเที่ยว  10 อันดับ 2040</h3>
+        <img src="https://f.ptcdn.info/509/032/000/1434505248-min2-o.jpg" alt="simple-picture" width="50%" height="35%"  />
+        <p>ข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆ</p>
+      </div>
+      <div class="content">
+        <h3>คาเฟ่เชียงใหม่น่าเที่ยว  10 อันดับ 2140</h3>
+        <img src="https://f.ptcdn.info/509/032/000/1434505248-min2-o.jpg" alt="simple-picture" width="50%" height="35%"  />
+        <p>ข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆข้อความยาวๆ</p>
+      </div>
+
+
+   </div>
 </body>
 
 </html>
