--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -11,6 +11,11 @@
 
 <body>
   <!-- Start coding here -->
+   <div class="main-container">
+    <div class="content">
+      <h1 class="head-content">TechUp</h1>
+    </div>
+   </div>
 </body>
 
 </html>
